Corrected alignment of about section heading

--- a/css/main.css
+++ b/css/main.css
@@ -82,8 +82,8 @@ header h2 {
 #about h2 {
     font-family: 'lora', serif;
     font-size:1.8rem;
-    padding-left: 25px;
-    width: 100%
+    padding-bottom: 15px;
+    width: 90%;
 }
 
 #about p {
